# wgpu-on-android

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  shader.frag
