[package]
name = "android"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
image = "0.23.4"
winit = "0.22.2"
cgmath = "0.17"
# wgpu = "0.5.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
futures = "0.3.5"

[build-dependencies]
shaderc = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.1.0"